--- a/custom.css
+++ b/custom.css
@@ -15,7 +15,7 @@
 }
 
 section.header{
-    background: url('bg_header.png');
+    background: url('bg_header1.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
